--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -37,6 +37,10 @@
 	background: #fff;
 	padding: 0;
 }
+.block-editor-writing-flow {
+	display: flex;
+	flex-direction: column;
+}
 body {
 	padding: 0;
 	background: #fff;
