Incorporating customizer CSS into theme

--- a/wp-content/plugins/crown-blocks/src/block-center-finder/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-center-finder/style.scss
@@ -127,6 +127,7 @@
 		padding: 2rem;
 		+ article.location {
 			margin-top: 1rem;
+			border-top: 2px solid #333;
 		}
 		.entry-featured-image {
 			margin: -2rem -2rem 2rem;
