--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -157,7 +157,7 @@
 		display: none;
 	}
 	.section-nav-nav {
-		background-color: $primary;
+		background-color: $dark-med-blue;
 		color: #fff;
 		text-align: left;
 		padding: 2rem map-get($container-padding-x, xs);
@@ -743,10 +743,11 @@
 			}
 		}
 		> .inner {
-			overflow: hidden;
 			&:after {
 				@include media-breakpoint-up(lg) {
-					@include icon(map-get($icomoon-icons, arrow-right-long), icomoon);
+					content: 'view';
+					font-family: $font-family-sans-serif;
+					font-style: italic;
 					flex: 1 1 auto;
 					display: flex;
 					align-items: center;
@@ -1324,7 +1325,7 @@
 				right: 2rem;
 				transform: rotateY(180deg);
 				@include media-breakpoint-up(xl) {
-					right: 3rem;
+					right: 5rem;
 				}
 			}
 		}
@@ -1354,7 +1355,7 @@
 				display: block;
 				margin-left: 1rem;
 				flex: 1 1 auto;
-				border-top: 4px solid $red;
+				border-top: 0.75rem solid $red;
 			}
 		}
 		.entry-topics {
@@ -1610,7 +1611,7 @@
 			}
 			input {
 				padding-left: 2.25rem;
-				box-shadow: inset 0 -2px $blue;
+				box-shadow: inset 0 -2px $dark-med-blue;
 			}
 		}
 		.form-footer {
@@ -1656,7 +1657,7 @@
 			}
 			&.active {
 				@include media-breakpoint-up(md) {
-					background-color: $blue;
+					background-color: $dark-med-blue;
 					color: #fff;
 					a {
 						color: mix($blue, #fff, 40%);
@@ -1667,8 +1668,8 @@
 				}
 				&:after {
 					@include media-breakpoint-up(xl) {
-						background-color: #fff;
-						color: $blue;
+						background-color: $dark-med-blue;
+						color: #fff;
 						opacity: 1;
 						text-indent: 0;
 					}
@@ -1699,7 +1700,11 @@
 		}
 	}
 	article.location {
-		background-color: $x-light-blue;
+		background-color: #fff;
+		font-family: $font-family-sans-serif-alt;
+		+ article.location {
+			border-color: $dark-med-blue;
+		}
 	}
 }
 
@@ -1748,6 +1753,9 @@
 	}
 	.link-title {
 		font-size: 1.5rem;
+		font-weight: 400;
+		letter-spacing: 0;
+		font-family: $font-family-sans-serif-alt;
 		@include media-breakpoint-up(xl) {
 			font-size: 2.5rem;
 		}
@@ -2479,7 +2487,7 @@
 				&:before {
 					content: '';
 					display: block;
-					height: 0.25rem;
+					height: 0.9375rem;
 					transition: max-width .4s, background .4s;
 					background: linear-gradient(to right, rgba(#fff, 0), #fff);
 					@include media-breakpoint-up(md) {
@@ -2492,8 +2500,7 @@
 				width: 4rem;
 				height: 4rem;
 				border-radius: 10rem;
-				background-color: #fff;
-				overflow: hidden;
+				background-color: transparent;
 				position: relative;
 				transition: opacity .2s, transform .2s ease-out;
 				@include media-breakpoint-up(md) {
@@ -2501,8 +2508,8 @@
 					transform: scale(.8);
 				}
 				&:before {
-					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
-					color: $body-color;
+					content: 'view';
+					color: inherit;
 					position: absolute;
 					display: flex;
 					width: 100%;
@@ -2514,6 +2521,10 @@
 					align-items: center;
 					transition: left ease-out .2s, opacity .2s;
 					transition-delay: .2s;
+					font-style: italic;
+					font-size: 1.86rem;
+					font-family: $font-family-sans-serif-alt;
+					padding-bottom: 0.5rem;
 					@include media-breakpoint-up(md) {
 						left: -.5rem;
 						opacity: 0;
@@ -2700,6 +2711,8 @@
 		.crumb {
 			a {
 				transition: opacity .15s;
+				font-weight: 400;
+				font-family: $font-family-sans-serif-alt;
 				&:hover {
 					color: inherit;
 					opacity: .8;
@@ -2774,6 +2787,9 @@
 		a.type:hover {
 			background-color: $primary;
 		}
+	}
+	.entry-title {
+		font-family: $font-family-sans-serif-alt;
 	}
 	.social-sharing-links {
 		.menu-item {
@@ -3007,7 +3023,9 @@
 		border-color: $red;
 	}
 	.entry-intro {
-		font-family: $font-family-serif;
+		font-family: $font-family-sans-serif-alt;
+		font-style: normal; 
+		opacity: 0.89;
 	}
 }
 
@@ -3126,7 +3144,7 @@
 				&:before {
 					content: '';
 					display: block;
-					height: 0.25rem;
+					height: 0.9375rem;
 					transition: max-width .4s;
 					background: linear-gradient(to right, rgba($body-color, 0), $body-color);
 					@include media-breakpoint-up(md) {
@@ -3139,8 +3157,7 @@
 				width: 4rem;
 				height: 4rem;
 				border-radius: 10rem;
-				background-color: #fff;
-				overflow: hidden;
+				background-color: transparent;
 				position: relative;
 				transition: opacity .2s, transform .2s ease-out;
 				@include media-breakpoint-up(md) {
@@ -3148,8 +3165,8 @@
 					transform: scale(.8);
 				}
 				&:before {
-					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
-					color: $body-color;
+					content: 'view';
+					color: inherit;
 					position: absolute;
 					display: flex;
 					width: 100%;
@@ -3161,6 +3178,10 @@
 					align-items: center;
 					transition: left ease-out .2s, opacity .2s;
 					transition-delay: .2s;
+					font-style: italic;
+					font-size: 1.86rem;
+					font-family: $font-family-sans-serif-alt;
+					padding-bottom: 0.5rem;
 					@include media-breakpoint-up(md) {
 						left: -.5rem;
 						opacity: 0;
