--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -15327,11 +15327,14 @@ readers do not read off random characters that represent icons */
   content: ""; }
 
 body {
-  line-height: 1.6; }
+  line-height: 1.46; }
 
 a {
   -webkit-transition: color .15s;
   transition: color .15s; }
+
+em {
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
 
 img {
   display: block;
@@ -15380,11 +15383,22 @@ h1.is-style-display, h2.is-style-display, h3.is-style-display, h4.is-style-displ
   h1.is-style-display strong, h2.is-style-display strong, h3.is-style-display strong, h4.is-style-display strong, h5.is-style-display strong, h6.is-style-display strong {
     font-weight: 700; }
 
-h1 {
+h1, .h1 {
   font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: uppercase;
-  font-weight: 800;
-  line-height: 1.1; }
+  font-weight: 900;
+  line-height: .925; }
+  #resource-template-default h1, #resource-template-default .h1 {
+    font-weight: 100; }
+
+h2, .h2 {
+  line-height: 1; }
+  h2 a, .h2 a {
+    color: rgba(3, 129, 195, 0.9);
+    background-color: transparent; }
+    h2 a:hover, .h2 a:hover {
+      text-decoration: underline;
+      color: rgba(3, 129, 195, 0.8); }
 
 .has-blue-color {
   color: #0381C3 !important; }
@@ -15501,7 +15515,7 @@ h1 {
 
 .has-extra-extra-extra-large-font-size {
   font-size: 3rem;
-  line-height: 1.2; }
+  line-height: .95; }
   @media (min-width: 992px) {
     .has-extra-extra-extra-large-font-size {
       font-size: 5rem; } }
@@ -15520,6 +15534,16 @@ h1 {
   font-family: "utopia-std", serif; }
   .revslider .is-style-serif {
     font-family: "utopia-std", serif !important; }
+
+.jumpercase {
+  text-transform: uppercase !important;
+  font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 900;
+  letter-spacing: -0.25px; }
+
+.has-extra-extra-large-font-size {
+  font-size: 3rem;
+  line-height: 1; }
 
 .font-weight-black {
   font-weight: 900; }
@@ -15548,7 +15572,7 @@ h1 {
 blockquote,
 .wp-block-quote {
   font-style: italic;
-  font-family: "utopia-std", serif;
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   padding-left: 0;
   border-left: none;
   line-height: 1.4; }
@@ -15564,7 +15588,8 @@ blockquote,
     blockquote.is-style-large p,
     .wp-block-quote.is-style-large p {
       font-size: inherit;
-      line-height: inherit; }
+      line-height: inherit;
+      font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
     blockquote.is-style-large .wp-block-quote__citation,
     blockquote.is-style-large cite,
     .wp-block-quote.is-style-large .wp-block-quote__citation,
@@ -15906,7 +15931,9 @@ form.feed-filters {
       outline: none;
       color: #032040;
       -webkit-transition: opactity .15s, color .15s;
-      transition: opactity .15s, color .15s; }
+      transition: opactity .15s, color .15s;
+      font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+      outline: none; }
       @media (min-width: 992px) {
         form.feed-filters .filters-header button.filters-toggle {
           -webkit-box-flex: 0;
@@ -17656,8 +17683,9 @@ form.feed-filters {
   .action-subject-link .action {
     display: block;
     font-size: 1.625rem;
-    font-family: "utopia-std", serif;
-    font-style: italic; }
+    font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-style: normal;
+    color: rgba(0, 38, 73, 0.4); }
   .action-subject-link .subject {
     display: block;
     text-transform: lowercase;
@@ -18746,6 +18774,12 @@ nav.pagination {
       bottom: 0;
       display: none; }
 
+.bred-top {
+  border-top: 15px solid #D11141; }
+
+.rpad {
+  padding-right: 8%; }
+
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container-featured-image.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-promo.alignfull,
@@ -18900,7 +18934,7 @@ nav.pagination {
   display: none; }
 
 .wp-block-crown-blocks-section-nav .section-nav-nav {
-  background-color: #032040;
+  background-color: #012D61;
   color: #fff;
   text-align: left;
   padding: 2rem 1rem; }
@@ -19553,37 +19587,29 @@ nav.pagination {
   opacity: 1;
   right: 0; }
 
-.wp-block-crown-blocks-featured-client-story a > .inner {
-  overflow: hidden; }
-  @media (min-width: 992px) {
-    .wp-block-crown-blocks-featured-client-story a > .inner:after {
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      display: inline-block;
-      font-style: normal;
-      font-variant: normal;
-      font-weight: normal;
-      line-height: 1;
-      font-family: icomoon;
-      content: "";
-      -webkit-box-flex: 1;
-          -ms-flex: 1 1 auto;
-              flex: 1 1 auto;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      font-size: 2.5rem;
-      position: relative;
-      right: .5rem;
-      opacity: 0;
-      -webkit-transition: right .2s ease-out, opacity .2s;
-      transition: right .2s ease-out, opacity .2s; } }
+@media (min-width: 992px) {
+  .wp-block-crown-blocks-featured-client-story a > .inner:after {
+    content: 'view';
+    font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-style: italic;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 2.5rem;
+    position: relative;
+    right: .5rem;
+    opacity: 0;
+    -webkit-transition: right .2s ease-out, opacity .2s;
+    transition: right .2s ease-out, opacity .2s; } }
 
 .wp-block-crown-blocks-featured-client-story h6 {
   font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
@@ -20344,7 +20370,7 @@ nav.pagination {
                 transform: rotateY(180deg); }
         @media (min-width: 1200px) {
           .wp-block-crown-blocks-featured-post-slider .post-feed-nav .slick-arrow.slick-prev {
-            right: 3rem; } }
+            right: 5rem; } }
   .wp-block-crown-blocks-featured-post-slider article {
     padding: 0 1rem;
     outline: none; }
@@ -20373,7 +20399,7 @@ nav.pagination {
         -webkit-box-flex: 1;
             -ms-flex: 1 1 auto;
                 flex: 1 1 auto;
-        border-top: 4px solid #D11141; }
+        border-top: 0.75rem solid #D11141; }
     .wp-block-crown-blocks-featured-post-slider article .entry-topics {
       margin-bottom: 1.5rem; }
       .wp-block-crown-blocks-featured-post-slider article .entry-topics .topic {
@@ -20581,8 +20607,8 @@ nav.pagination {
     top: .6rem; }
   .wp-block-crown-blocks-center-finder .location-search-form .field input {
     padding-left: 2.25rem;
-    -webkit-box-shadow: inset 0 -2px #0381C3;
-            box-shadow: inset 0 -2px #0381C3; }
+    -webkit-box-shadow: inset 0 -2px #012D61;
+            box-shadow: inset 0 -2px #012D61; }
 
 .wp-block-crown-blocks-center-finder .location-search-form .form-footer button {
   width: 3rem;
@@ -20634,7 +20660,7 @@ nav.pagination {
 
 @media (min-width: 768px) {
   .wp-block-crown-blocks-center-finder .locations article.location.active {
-    background-color: #0381C3;
+    background-color: #012D61;
     color: #fff; }
     .wp-block-crown-blocks-center-finder .locations article.location.active a {
       color: #9acde7; }
@@ -20643,8 +20669,8 @@ nav.pagination {
 
 @media (min-width: 1200px) {
   .wp-block-crown-blocks-center-finder .locations article.location.active:after {
-    background-color: #fff;
-    color: #0381C3;
+    background-color: #012D61;
+    color: #fff;
     opacity: 1;
     text-indent: 0; } }
 
@@ -20685,7 +20711,10 @@ nav.pagination {
     opacity: 0; } }
 
 .wp-block-crown-blocks-center-finder article.location {
-  background-color: #F4F8FD; }
+  background-color: #fff;
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
+  .wp-block-crown-blocks-center-finder article.location + article.location {
+    border-color: #012D61; }
 
 /*	Portal Link
 ---------------------------------------------------------*/
@@ -20729,7 +20758,10 @@ nav.pagination {
       font-size: 1.5rem; } }
 
 .wp-block-crown-blocks-portal-link .link-title {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0;
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
   @media (min-width: 1200px) {
     .wp-block-crown-blocks-portal-link .link-title {
       font-size: 2.5rem; } }
@@ -21435,7 +21467,7 @@ nav.pagination {
       .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(1):before {
         content: '';
         display: block;
-        height: 0.25rem;
+        height: 0.9375rem;
         -webkit-transition: max-width .4s, background .4s;
         transition: max-width .4s, background .4s;
         background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#fff));
@@ -21448,8 +21480,7 @@ nav.pagination {
       width: 4rem;
       height: 4rem;
       border-radius: 10rem;
-      background-color: #fff;
-      overflow: hidden;
+      background-color: transparent;
       position: relative;
       -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
       transition: opacity .2s, -webkit-transform .2s ease-out;
@@ -21462,16 +21493,8 @@ nav.pagination {
               -ms-transform: scale(0.8);
                   transform: scale(0.8); } }
       .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2):before {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: normal;
-        line-height: 1;
-        font-family: icomoon;
-        content: "";
-        color: #032040;
+        content: 'view';
+        color: inherit;
         position: absolute;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -21490,7 +21513,11 @@ nav.pagination {
         -webkit-transition: left ease-out .2s, opacity .2s;
         transition: left ease-out .2s, opacity .2s;
         -webkit-transition-delay: .2s;
-                transition-delay: .2s; }
+                transition-delay: .2s;
+        font-style: italic;
+        font-size: 1.86rem;
+        font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+        padding-bottom: 0.5rem; }
         @media (min-width: 768px) {
           .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2):before {
             left: -.5rem;
@@ -21637,7 +21664,9 @@ nav.pagination {
     font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
   .wp-block-crown-blocks-resource-header .entry-breadcrumbs .crumb a {
     -webkit-transition: opacity .15s;
-    transition: opacity .15s; }
+    transition: opacity .15s;
+    font-weight: 400;
+    font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
     .wp-block-crown-blocks-resource-header .entry-breadcrumbs .crumb a:hover {
       color: inherit;
       opacity: .8; }
@@ -21688,6 +21717,8 @@ nav.pagination {
     color: #032040; }
   .wp-block-crown-blocks-resource-header .entry-type a.type:hover {
     background-color: #032040; }
+  .wp-block-crown-blocks-resource-header .entry-title {
+    font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
   .wp-block-crown-blocks-resource-header .social-sharing-links .menu-item a {
     border-color: #0381C3; }
     .wp-block-crown-blocks-resource-header .social-sharing-links .menu-item a:hover {
@@ -21879,7 +21910,9 @@ nav.pagination {
     font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     border-color: #D11141; }
   .wp-block-crown-blocks-client-story-header .entry-intro {
-    font-family: "utopia-std", serif; }
+    font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-style: normal;
+    opacity: 0.89; }
 
 /*	Client Story Index
 ---------------------------------------------------------*/
@@ -22016,7 +22049,7 @@ nav.pagination {
       .wp-block-crown-blocks-client-story-index article.type-client_story .entry-link > span:nth-child(1):before {
         content: '';
         display: block;
-        height: 0.25rem;
+        height: 0.9375rem;
         -webkit-transition: max-width .4s;
         transition: max-width .4s;
         background: -webkit-gradient(linear, left top, right top, from(rgba(3, 32, 64, 0)), to(#032040));
@@ -22029,8 +22062,7 @@ nav.pagination {
       width: 4rem;
       height: 4rem;
       border-radius: 10rem;
-      background-color: #fff;
-      overflow: hidden;
+      background-color: transparent;
       position: relative;
       -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
       transition: opacity .2s, -webkit-transform .2s ease-out;
@@ -22043,16 +22075,8 @@ nav.pagination {
               -ms-transform: scale(0.8);
                   transform: scale(0.8); } }
       .wp-block-crown-blocks-client-story-index article.type-client_story .entry-link > span:nth-child(2):before {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: normal;
-        line-height: 1;
-        font-family: icomoon;
-        content: "";
-        color: #032040;
+        content: 'view';
+        color: inherit;
         position: absolute;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -22071,7 +22095,11 @@ nav.pagination {
         -webkit-transition: left ease-out .2s, opacity .2s;
         transition: left ease-out .2s, opacity .2s;
         -webkit-transition-delay: .2s;
-                transition-delay: .2s; }
+                transition-delay: .2s;
+        font-style: italic;
+        font-size: 1.86rem;
+        font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+        padding-bottom: 0.5rem; }
         @media (min-width: 768px) {
           .wp-block-crown-blocks-client-story-index article.type-client_story .entry-link > span:nth-child(2):before {
             left: -.5rem;
@@ -22646,8 +22674,8 @@ nav.pagination {
           flex: 1 1 auto; }
 
 .simple-subscribe-form_wrapper input[type="text"] {
-  -webkit-box-shadow: inset 0 -2px #0381C3;
-          box-shadow: inset 0 -2px #0381C3; }
+  -webkit-box-shadow: inset 0 -2px #1B406F;
+          box-shadow: inset 0 -2px #1B406F; }
 
 .simple-subscribe-form_wrapper .gform_footer {
   -webkit-box-flex: 0;
