--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_buttons.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_buttons.scss
@@ -171,8 +171,9 @@
 	.action {
 		display: block;
 		font-size: 1.625rem;
-		font-family: $font-family-serif;
-		font-style: italic;
+		font-family: $font-family-sans-serif-alt;
+		font-style: normal;
+		color: rgba(#002649, .4);
 	}
 	.subject {
 		display: block;
