--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -369,7 +369,7 @@ $gform-gutter-width: 10px;
 		flex: 1 1 auto;
 	}
 	input[type="text"] {
-		box-shadow: inset 0 -2px $secondary;
+		box-shadow: inset 0 -2px #1B406F;
 	}
 	.gform_footer {
 		flex: 0 0 3.5rem;
