--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -1,6 +1,6 @@
 
 #footer {
-	background-color: $ghost;
+	background-color: #edeff2;
 	line-height: $line-height-base;
 	.container {
 		// max-width: 100%;
@@ -73,7 +73,7 @@ body {
 	text-transform: uppercase;
 	letter-spacing: .1em;
 	font-weight: 400;
-	background-color: $primary;
+	background-color: #002649;
 	color: #fff;
 	text-align: center;
 	padding: 1rem;
@@ -112,6 +112,7 @@ body {
 		letter-spacing: .1em;
 		font-size: 1.125rem;
 		color: $blue;
+		font-weight:600;
 		span {
 			color: $primary;
 		}
@@ -122,7 +123,8 @@ body {
 	.gform_title {
 		margin-top: -.5rem;
 		font-size: 1.75rem;
-		font-weight: 400;
+		font-weight: 500;
+		font-family: $font-family-sans-serif-alt;
 	}
 }
 
@@ -248,7 +250,9 @@ body {
 		}
 		.branch {
 			margin-bottom: 1rem;
-			text-transform: uppercase;
+			text-transform: capitalize;
+			font-weight: 400;
+			opacity: .85;
 			.name {
 				display: none;
 			}
@@ -263,16 +267,20 @@ body {
 		margin-top: 2rem;
 		h3 {
 			margin-bottom: 0.5rem;
+			opacity: .85;
+			font-weight: 700;
 		}
 		ul {
-			font-size: 1.125rem;
+			font-size: 0.925rem;
 			margin: 0;
 			padding: 0;
 			list-style: none;
-			line-height: $line-height-sm;
+			line-height: 1;
 			column-count: 2;
 			column-gap: 2rem;
 			max-width: 800px;
+			color: #273a64;
+			font-family: $font-family-sans-serif-alt;
 			@include media-breakpoint-up(md) {
 				column-count: 3;
 			}
@@ -390,6 +398,7 @@ body {
 		font-weight: 600;
 		letter-spacing: .1em;
 		text-transform: uppercase;
+		font-family: $font-family-sans-serif-alt;
 		color: $body-color;
 	}
 	.menu {
