--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -3295,6 +3295,28 @@
 			@include media-breakpoint-up(md) {
 				margin-bottom: 3rem;
 			}
+			.entry-topic {
+				margin-bottom: 1rem;
+				.topic {
+					transition: background-color .2s, color .2s, boder-color .2s;
+					display: inline-block;
+					line-height: 1.2;
+					font-weight: 700;
+					font-size: 0.625rem;
+					letter-spacing: .05em;
+					text-transform: uppercase;
+					border-radius: 10rem;
+					border: 1px solid $primary;
+					padding: .5rem .75rem;
+					color: $primary;
+				}
+				a.topic {
+					&:hover {
+						background-color: $primary;
+						color: #fff;
+					}
+				}
+			}
 		}
 		.entry-title {
 			font-weight: 400;
