--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -173,6 +173,27 @@ body.mobile-menu-active {
 }
 
 
+/*	Search Form
+---------------------------------------------------------*/
+
+#mobile-menu .search-form {
+	padding: 1rem;
+	padding-top: 0;
+	input[type=search] {
+		padding: .75rem 1.25rem;
+		box-shadow: none;
+		border: 1px solid #fff;
+		border-radius: 10rem;
+		height: auto;
+		padding-left: 2.5rem;
+		color: #fff;
+		&::placeholder {
+			color: rgba(#fff, .3);
+		}
+	}
+}
+
+
 /*	Primary Nav
 ---------------------------------------------------------*/
 
