--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -25933,374 +25933,30 @@ body.mobile-menu-active {
       width: calc(50% - .5rem);
       margin-left: .5rem; }
 
-#index-entries .entries-list > .inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0 -15px -2rem; }
-  @media (min-width: 992px) {
-    #index-entries .entries-list > .inner {
-      display: grid;
-      grid-template-columns: 33.33333% 33.33333% 33.33333%; }
-      #index-entries .entries-list > .inner:after {
-        content: '';
-        display: block;
-        grid-column-start: 3;
-        grid-column-end: 4; } }
+#index-entries .entries-list article {
+  padding: 3rem 0;
+  border-bottom: 4px solid #032040; }
+  #index-entries .entries-list article:first-child {
+    border-top: 4px solid #032040;
+    margin-top: 3rem; }
+  #index-entries .entries-list article .entry-header {
+    margin-bottom: 0.5rem; }
+  #index-entries .entries-list article .entry-title {
+    margin-bottom: 0; }
+    #index-entries .entries-list article .entry-title a {
+      color: inherit; }
+  #index-entries .entries-list article .entry-link {
+    margin-bottom: 0; }
+    #index-entries .entries-list article .entry-link a {
+      display: inline-block;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 100%;
+      vertical-align: middle; }
 
-#index-entries .entries-list article,
-#index-entries .entries-list aside.cta-container {
-  width: 100%;
-  padding: 0 15px 2rem; }
-  @media (min-width: 576px) {
-    #index-entries .entries-list article,
-    #index-entries .entries-list aside.cta-container {
-      width: 50%; } }
-  @media (min-width: 992px) {
-    #index-entries .entries-list article,
-    #index-entries .entries-list aside.cta-container {
-      width: 100%; } }
-
-#index-entries .entries-list article.format-video .entry-thumbnail a:hover .image:before {
-  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), inset 0 0 0 2px #fff;
-          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), inset 0 0 0 2px #fff; }
-
-#index-entries .entries-list article.format-video .entry-thumbnail a:hover .image:after {
-  width: 22%;
-  padding-top: 22%;
-  margin-left: -11%;
-  margin-top: -11%;
-  background-color: rgba(255, 255, 255, 0.2);
-  -webkit-box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5);
-          box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5); }
-
-#index-entries .entries-list article.format-video .entry-thumbnail a:after {
-  display: none; }
-
-#index-entries .entries-list article.format-video .entry-thumbnail .image {
-  position: relative; }
-  #index-entries .entries-list article.format-video .entry-thumbnail .image:before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 15%;
-    height: 0;
-    padding-top: 15%;
-    left: 50%;
-    top: 50%;
-    margin-left: -7.5%;
-    margin-top: -7.5%;
-    border-radius: 100%;
-    background-color: #0381C3;
-    z-index: 3;
-    background-image: url("data:image/svg+xml,%3Csvg class='bi bi-play-fill' width='1em' height='1em' viewBox='0 0 16 16' fill='%23FFFFFF' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z'/%3E%3C/svg%3E");
-    background-size: 60%;
-    background-position: 60% center;
-    background-repeat: no-repeat;
-    -webkit-transition: -webkit-box-shadow .2s;
-    transition: -webkit-box-shadow .2s;
-    transition: box-shadow .2s;
-    transition: box-shadow .2s, -webkit-box-shadow .2s; }
-  #index-entries .entries-list article.format-video .entry-thumbnail .image:after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 20%;
-    height: 0;
-    padding-top: 20%;
-    left: 50%;
-    top: 50%;
-    margin-left: -10%;
-    margin-top: -10%;
-    border-radius: 100%;
-    -webkit-box-shadow: inset 0 0 0 2px #fff;
-            box-shadow: inset 0 0 0 2px #fff;
-    z-index: 2;
-    background-color: rgba(255, 255, 255, 0);
-    -webkit-transition: width .2s ease-out, padding-top .2s ease-out, margin .2s ease-out, background-color .2s, -webkit-box-shadow .2s;
-    transition: width .2s ease-out, padding-top .2s ease-out, margin .2s ease-out, background-color .2s, -webkit-box-shadow .2s;
-    transition: width .2s ease-out, padding-top .2s ease-out, margin .2s ease-out, background-color .2s, box-shadow .2s;
-    transition: width .2s ease-out, padding-top .2s ease-out, margin .2s ease-out, background-color .2s, box-shadow .2s, -webkit-box-shadow .2s; }
-
-#index-entries .entries-list article .entry-thumbnail {
-  margin-bottom: 1rem; }
-  #index-entries .entries-list article .entry-thumbnail a {
-    display: block;
-    position: relative;
-    overflow: hidden;
-    -webkit-transition: -webkit-transform .2s ease-out, -webkit-box-shadow .2s;
-    transition: -webkit-transform .2s ease-out, -webkit-box-shadow .2s;
-    transition: transform .2s ease-out, box-shadow .2s;
-    transition: transform .2s ease-out, box-shadow .2s, -webkit-transform .2s ease-out, -webkit-box-shadow .2s; }
-    #index-entries .entries-list article .entry-thumbnail a:hover {
-      -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-              box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3); }
-      #index-entries .entries-list article .entry-thumbnail a:hover:before {
-        opacity: 1; }
-      #index-entries .entries-list article .entry-thumbnail a:hover:after {
-        opacity: 1;
-        -webkit-transform: none;
-            -ms-transform: none;
-                transform: none;
-        -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
-        transition: opacity .2s, -webkit-transform .2s ease-out;
-        transition: opacity .2s, transform .2s ease-out;
-        transition: opacity .2s, transform .2s ease-out, -webkit-transform .2s ease-out; }
-    #index-entries .entries-list article .entry-thumbnail a:before, #index-entries .entries-list article .entry-thumbnail a:after {
-      content: '';
-      position: absolute;
-      z-index: 1; }
-    #index-entries .entries-list article .entry-thumbnail a:before {
-      background-color: rgba(3, 129, 195, 0.8);
-      -webkit-transition: opacity .2s;
-      transition: opacity .2s;
-      opacity: 0;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      border: 4px solid #fff; }
-    #index-entries .entries-list article .entry-thumbnail a:after {
-      background-image: url("data:image/svg+xml,%3Csvg class='bi bi-arrow-right-short' width='1em' height='1em' viewBox='0 0 16 16' fill='%23FFFFFF' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z'/%3E%3Cpath fill-rule='evenodd' d='M4 8a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H4.5A.5.5 0 0 1 4 8z'/%3E%3C/svg%3E");
-      width: 12%;
-      height: 0;
-      padding-top: 12%;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      left: 50%;
-      top: 50%;
-      margin-top: -6%;
-      margin-left: -6%;
-      opacity: 0;
-      -webkit-transform: translateX(-50%);
-          -ms-transform: translateX(-50%);
-              transform: translateX(-50%);
-      -webkit-transition: opacity .2s, -webkit-transform 0s .2s;
-      transition: opacity .2s, -webkit-transform 0s .2s;
-      transition: opacity .2s, transform 0s .2s;
-      transition: opacity .2s, transform 0s .2s, -webkit-transform 0s .2s; }
-  #index-entries .entries-list article .entry-thumbnail .image {
-    height: 0;
-    padding-top: 66.66667%;
-    background-color: rgba(0, 0, 0, 0.2);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; }
-    #index-entries .entries-list article .entry-thumbnail .image img {
-      display: none; }
-
-#index-entries .entries-list article .entry-title {
-  margin-bottom: 0; }
-  #index-entries .entries-list article .entry-title a {
-    color: inherit; }
-
-#index-entries .entries-list aside.cta-container {
-  grid-column-start: 3;
-  grid-column-end: 4; }
-  @media (min-width: 576px) {
-    #index-entries .entries-list aside.cta-container {
-      width: 100%; } }
-  @media (min-width: 992px) {
-    #index-entries .entries-list aside.cta-container {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      padding-bottom: 0; } }
-  #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action {
-    margin: 0;
-    float: none;
-    max-width: none;
-    width: 100%; }
-    @media (min-width: 576px) {
-      #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex; } }
-    @media (min-width: 992px) {
-      #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action {
-        margin-bottom: -66.66667%; } }
-    #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action > .inner {
-      padding-bottom: 0 !important; }
-      @media (min-width: 576px) {
-        #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action > .inner {
-          width: 100%;
-          -webkit-box-align: start;
-              -ms-flex-align: start;
-                  align-items: flex-start; } }
-    @media (max-width: 575.98px) {
-      #index-entries .entries-list aside.cta-container .wp-block-crown-blocks-call-to-action .cta-bg-image {
-        display: none; } }
-
-#index-entries .entries-list.item-count-4 article:nth-child(4) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-@media (min-width: 576px) {
-  #index-entries .entries-list.item-count-4 article:nth-child(4) {
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0; } }
-
-#index-entries .entries-list.item-count-4 aside.cta-container {
-  grid-row-start: 1;
-  grid-row-end: 2; }
-
-#index-entries .entries-list.item-count-4 > .inner:after {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-5 article:nth-child(4), #index-entries .entries-list.item-count-5 article:nth-child(5) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-@media (min-width: 576px) {
-  #index-entries .entries-list.item-count-5 article:nth-child(4) {
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0; } }
-
-#index-entries .entries-list.item-count-5 aside.cta-container {
-  grid-row-start: 1;
-  grid-row-end: 2; }
-
-#index-entries .entries-list.item-count-5 > .inner:after {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-6 article:nth-child(5), #index-entries .entries-list.item-count-6 article:nth-child(6) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-6 aside.cta-container {
-  grid-row-start: 1;
-  grid-row-end: 2; }
-
-#index-entries .entries-list.item-count-6 > .inner:after {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-7 article:nth-child(5), #index-entries .entries-list.item-count-7 article:nth-child(6), #index-entries .entries-list.item-count-7 article:nth-child(7) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-7 aside.cta-container {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-7 > .inner:after {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-8 article:nth-child(7), #index-entries .entries-list.item-count-8 article:nth-child(8) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-8 aside.cta-container {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-8 > .inner:after {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-9 article:nth-child(7), #index-entries .entries-list.item-count-9 article:nth-child(8), #index-entries .entries-list.item-count-9 article:nth-child(9) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-9 aside.cta-container {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-9 > .inner:after {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-10 article:nth-child(9), #index-entries .entries-list.item-count-10 article:nth-child(10) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-10 aside.cta-container {
-  grid-row-start: 2;
-  grid-row-end: 3; }
-
-#index-entries .entries-list.item-count-10 > .inner:after {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-11 article:nth-child(9), #index-entries .entries-list.item-count-11 article:nth-child(10), #index-entries .entries-list.item-count-11 article:nth-child(11) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-11 aside.cta-container {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-11 > .inner:after {
-  grid-row-start: 4;
-  grid-row-end: 5; }
-
-#index-entries .entries-list.item-count-12 article:nth-child(11), #index-entries .entries-list.item-count-12 article:nth-child(12) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-12 aside.cta-container {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-12 > .inner:after {
-  grid-row-start: 4;
-  grid-row-end: 5; }
-
-#index-entries .entries-list.item-count-13 article:nth-child(11), #index-entries .entries-list.item-count-13 article:nth-child(12), #index-entries .entries-list.item-count-13 article:nth-child(13) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-13 aside.cta-container {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-13 > .inner:after {
-  grid-row-start: 4;
-  grid-row-end: 5; }
-
-#index-entries .entries-list.item-count-14 article:nth-child(13), #index-entries .entries-list.item-count-14 article:nth-child(14) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-14 aside.cta-container {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-14 > .inner:after {
-  grid-row-start: 4;
-  grid-row-end: 5; }
-
-#index-entries .entries-list.item-count-15 article:nth-child(13), #index-entries .entries-list.item-count-15 article:nth-child(14), #index-entries .entries-list.item-count-15 article:nth-child(15) {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-#index-entries .entries-list.item-count-15 aside.cta-container {
-  grid-row-start: 3;
-  grid-row-end: 4; }
-
-#index-entries .entries-list.item-count-15 > .inner:after {
-  grid-row-start: 4;
-  grid-row-end: 5; }
+#index-entries .pagination-wrapper {
+  margin-top: 3rem; }
 
 body.single-post #main-article .entry-footer .continue-reading {
   margin-top: 4rem; }
