--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
@@ -870,14 +870,14 @@
 
 #header-search {
 	display: none;
-	margin-left: 1rem;
+	margin-left: .5rem;
 	position: relative;
 	z-index: 1;
 	@include media-breakpoint-up(md) {
 		display: block;
 	}
 	@include media-breakpoint-up(lg) {
-		margin-left: 2rem;
+		margin-left: 1rem;
 	}
 	#header.search-active & {
 		button.toggle {
@@ -923,22 +923,22 @@
 		&:after {
 			opacity: 0;
 			content: '×';
-			width: 3rem;
-			height: 3rem;
+			width: 2rem;
+			height: 2rem;
 			position: absolute;
 			left: 50%;
 			top: 50%;
 			transform: translate(-50%, -50%);
 			font-weight: 400;
 			line-height: 1;
-			font-size: 3rem;
+			font-size: 2rem;
 			font-family: $font-family-sans-serif-alt;
 			transition: opacity .3s, color .15s;
 			margin-top: -.05rem;
 		}
 		.icon {
-			width: 2rem;
-			height: 2rem;
+			width: 1.25rem;
+			height: 1.25rem;
 			position: absolute;
 			left: 50%;
 			top: 50%;
@@ -948,6 +948,7 @@
 				width: 100%;
 				height: 100%;
 				transition: fill .15s;
+				display: block;
 			}
 		}
 		.label {
