--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -113,8 +113,45 @@ body.mobile-menu-active {
 	}
 }
 
-#mobile-menu-close {
+#mobile-menu-search-toggle {
+	padding: 0;
+	border: none;
+	outline: none;
+	box-shadow: none;
+	background-color: transparent;
+	width: 2rem;
+	height: 2rem;
+	position: relative;
+	display: block;
+	transition: color .15s, opacity .15s;
+	color: #fff;
+	overflow: hidden;
 	margin-left: .5rem;
+	&:hover {
+		opacity: .75;
+	}
+	.icon {
+		width: 1.25rem;
+		height: 1.25rem;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		transition: opacity .3s;
+		svg {
+			width: 100%;
+			height: 100%;
+			transition: fill .15s;
+			display: block;
+		}
+	}
+	.label {
+		display: none;
+	}
+}
+
+#mobile-menu-close {
+	margin-left: 0;
 	margin-right: -.5rem;
 	line-height: 1;
 	color: #fff;
@@ -177,8 +214,15 @@ body.mobile-menu-active {
 ---------------------------------------------------------*/
 
 #mobile-menu .search-form {
-	padding: 1rem;
-	padding-top: 0;
+	padding: 0 1rem;
+	transition: height .3s ease-out, opacity .3s;
+	overflow: hidden;
+	height: 0;
+	opacity: 0;
+	&.active {
+		height: 4rem;
+		opacity: 1;
+	}
 	input[type=search] {
 		padding: .75rem 1.25rem;
 		box-shadow: none;
