--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -3027,6 +3027,51 @@
 		font-style: normal; 
 		opacity: 0.89;
 	}
+	.entry-header-links {
+		@include media-breakpoint-up(lg) {
+			display: flex;
+			align-items: flex-end;
+		}
+	}
+	.social-sharing-links {
+		flex: 1 1 auto;
+	}
+	.return-to-index {
+		display: inline-block;
+		font-size: 1rem;
+		font-weight: 700;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		line-height: $line-height-sm;
+		color: #fff;
+		margin-bottom: 1.5rem;
+		margin-top: 1.5rem;
+		transition: opacity .15s;
+		@include media-breakpoint-up(md) {
+			margin-bottom: 0;
+		}
+		@include media-breakpoint-up(lg) {
+			margin-left: 2rem;
+			margin-bottom: .4rem;
+		}
+		&:hover {
+			opacity: .75;
+		}
+		&:before {
+			content: '';
+			width: 1em;
+			height: 1em;
+			display: inline-block;
+			margin-right: .5em;
+			background-image: url(s);
+			background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$blue}" class="bi bi-grid-3x3-gap-fill" viewBox="0 0 16 16"><path d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/></svg>'));
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: contain;
+			vertical-align: top;
+			margin-top: 0.075em;
+		}
+	}
 }
 
 
